Fix scrollbar overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@
 }
 /* ========== Tags section ========== */
 html {
+	overflow-y: scroll;
 	height: 100%;
 }
 body {
